tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/string-us.stderr
TOML parse error at line 1, column 18
  |
1 | string-us = "null"
  |                  ^
invalid basic string
